# TradingAgent

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  pyproject.toml
config/: strategies.yaml  watchlist.yaml
deploy/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  EXECUTION_PLAN.md
memory/: status.md
scripts/: hello.py  replay.py
src/: _bootstrap.py  schema.sql
src/core/: signal.py  watchlist.py
src/dashboard/: app.py  db.py
src/dashboard/static/: app.css
src/dashboard/templates/: admin.html  daily.html  latency.html  layout.html  signals.html  today.html
src/execution/: agent.py  fill_poller.py
src/llm/: cost_tracker.py  judge.py
src/market/: alpaca_rest.py  alpaca_ws.py  data_agent.py  indicators.py
src/orchestrator/: alerts.py  calendar.py  daily_summary.py  logging.py  main.py
src/risk_rules/: agent.py  daily_halt.py  earnings.py  kill_switch.py  portfolio.py  rules.py  sizing.py
src/storage/: bars_repo.py  fill_repo.py  llm_call_repo.py  order_repo.py  risk_decision_repo.py  risk_state_repo.py  signal_repo.py  snapshot_repo.py
src/strategies/: __init__.py  agent.py  base.py  mean_reversion.py  momentum.py
tests/: conftest.py  test_bars_repo.py  test_calendar.py  test_daily_summary.py  test_dashboard.py  test_data_agent.py  test_execution.py  test_indicators.py  test_llm_cost_tracker.py  test_llm_judge.py  test_orchestrator_logging.py  test_replay.py  test_risk_rules.py  test_smoke.py  test_snapshot_repo.py  test_strategies.py
